<resources>
    <string name="app_name">ToDoNearMe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="EditTextName">Name</string>
    <string name="descriptionEditText">Description</string>
    <string name="addressEditText">Address</string>
    <string name="addBtnName">Add</string>
    <string name="find_location">Find location</string>
    <string name="no_geocoder_available">"Can't find address currently"</string>
    <string name="new_to_do_title">New to do</string>
    <string name="confirm_selection_maps">Select location</string>
    <string name="NA">N/A</string>
</resources>
