<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".CreateActivity">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".CreateActivity">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/EditTextName"
            android:inputType="text"
            android:text=""
            tools:targetApi="o" />


        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="@string/descriptionEditText"
            android:ems="10"
            android:hint="@string/descriptionEditText"
            android:inputType="text|textLongMessage|textMultiLine"
            android:layout_below="@+id/editText2"
            tools:targetApi="o" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/editText3"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/find_location"
            app:srcCompat="@mipmap/maps_icon" />

        <AutoCompleteTextView
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText3"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_toEndOf="@+id/imageButton"
            android:autofillHints="@string/addressEditText"
            android:ems="10"
            android:hint="@string/addressEditText"
            android:inputType="text"
            android:text=""
            tools:targetApi="o" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/ic_addbtn_background"
            android:gravity="center"
            android:text="@string/addBtnName"
            android:textColor="@color/common_google_signin_btn_text_dark" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>